1999-05-23  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* server-src/amindex.h: Keep P macro expression in a single line.
	Reported by Patrick Harrold <patrickh@nasco-inc.com>

	* common-src/Makefile.am (statfs_LDADD): Added alloc.obj.

	* common-src/statfs.c (STATFS_SCALE, sys/statvfs.h): If f_frsize is
	zero, use f_bsize.  It now works with GNU libc 2.1.
	Reported by Heikki Vatiainen <hessu@cs.tut.fi>

1999-05-22 Alex Pilosov <alex@pilosoft.com>

	* server-src/amindexd.c (is_dump_host_valid): sanitize_name(host)
	before doing a stat.
	* server-src/tapefile.c (lookup_nb_tape): init pos to 0.

1999-05-19 Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/reporter.c: take the orig size from the SUCCESS line.
	use value from the infofile only the datestamp are equal.
	Write all available value.

1999-05-15 Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/planner.c (pick_inclevel): check for base_level+1 if
	we don't have estimate for base_level. Needed for FORCE_BUMP.
	* server-src/planner.c (promote_highest_priority_incremental):
	Don't promote if we don't have level 0 estimate. No more need
	to check for skip_full, DS_NOFULL, DS_INCRONLY or FORCE_BUMP.

1999-05-15 Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* server-src/amflush.c: ignore SIGPIPE
	* server-src/driver.c: ignore SIGPIPE
	* server-src/driverio.c (taper_cmd, dumper_cmd): return 0 on error, 
	1 on success.
	* server-src/driverio.h (taper_cmd, dumper_cmd): prototype.

1999-05-14  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* docs/TAPE.CHANGERS (chg-rth): URL for chs is no longer valid.

1999-05-10  Mike Grupenhoff <kashmir@munge.com>

	* client-src/sendsize.c (getsize_dump): print out the strerror
	if we can't exec killpgrp.

1999-05-07 Jean-Louis Martineau <martineau@IRO.UMontreal.CA>

	* example/amanda.conf.in: typo

1999-05-05  Mike Grupenhoff <kashmir@munge.com>

	* server-src/amverify.sh.in (pecho): new function.  Like echo